Cleanup HTML and ensure CSS naming aligns with BEM

--- a/source/stylesheets/scss/carousel.scss
+++ b/source/stylesheets/scss/carousel.scss
@@ -1,19 +1,19 @@
 
 @layer components {
-  .carousel {
+  .press__carousel {
     width: 100%;
     height: 50vh;
     position: relative;
 
   }
 
-  .carousel > ul {
+  .press__carousel > ul {
     margin: 0;
     padding: 0;
     list-style: none;
   }
 
-  .slide {
+  .press__carousel-slide {
     position: absolute;
     inset: 0;
     opacity: 0;
@@ -21,7 +21,7 @@
     transition-delay: 200ms;
   }
 
-  .slide > img {
+  .press__carousel-slide > img {
     display: block;
     width: 100%;
     height: 100%;
@@ -30,13 +30,13 @@
   }
 
 
-  .slide[data-active] {
+  .press__carousel-slide[data-active] {
     opacity: 1;
     z-index: 1;
     transition-delay: 0ms;
   }
 
-  .carousel-button {
+  .press__carousel-button {
     position: absolute;
     z-index: 2;
     background: none;
@@ -51,21 +51,21 @@
     background-color: var(--clr-dark);
   }
 
-  .carousel-button:hover,
-  .carousel-button:focus {
+  .press__carousel-button:hover,
+  .press__carousel-button:focus {
     color: #eaf0db;
     background-color: #4c2847;
   }
 
-  .carousel-button:focus {
+  .press__carousel-button:focus {
     outline: 1px solid black
   }
 
-  .carousel-button.prev {
+  .press__carousel-button.prev {
     left: 1rem;
   }
 
-  .carousel-button.next {
+  .press__carousel-button.next {
     right: 1rem;
   }
 
