--- a/source/stylesheets/scss/generic.scss
+++ b/source/stylesheets/scss/generic.scss
@@ -122,7 +122,7 @@
     
   }
   
-  .background-normal {
+  .--background-normal {
     background: var(--background);
     z-index: 1;
   }
@@ -154,7 +154,7 @@
     margin-top: -150px;
   }
 
-  .spikes__title-bg {
+  .video__title-bg {
     background-color: rgba(223, 126, 52, 0.65);
     width: fit-content;
     padding: 1rem;
