--- a/source/stylesheets/scss/media-player.scss
+++ b/source/stylesheets/scss/media-player.scss
@@ -66,7 +66,7 @@
   opacity: 1.0;
   }
   
-  .player__slider_container {
+  .player__slider-container {
     flex-grow: 1;
     width: 100%; 
   }
