--- a/source/stylesheets/scss/social-links.scss
+++ b/source/stylesheets/scss/social-links.scss
@@ -1,17 +1,17 @@
 
 @layer components {
-  .social-links {
+  .contact__social-links {
     display: flex;
     justify-content: center;
     gap: 20px;
     margin-top: 20px;
   }
-  .social-links a {
+  .contact__social-links a {
     font-size: 30px;
     color: var(--foreground);
     text-decoration: none;
   }
-  .social-links a:hover {
+  .contact__social-links a:hover {
     color: var(--clr-accent); 
   }
 }
