--- a/source/stylesheets/scss/video.scss
+++ b/source/stylesheets/scss/video.scss
@@ -1,6 +1,6 @@
 
 @layer components {
-  .spikes__ytvideo {
+  .video__ytvideo {
     max-width: 100%;
     margin-bottom: 2rem;
   }
